<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/header"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_book_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/detail"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/header"
                android:background="@color/white"
                android:layout_marginTop="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tvDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/black_500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:padding="6dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/detail_information"
                            android:textSize="22sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitle"
                    android:text="@string/title"
                    android:textColor="@color/black_700"
                    android:textSize="18sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvDetail"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:text="@string/book_title"
                    android:textColor="@color/black_500"
                    app:layout_constraintStart_toEndOf="@id/tvTitle"
                    app:layout_constraintTop_toTopOf="@id/tvTitle"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="68dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/author"
                    android:textColor="@color/black_700"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/author"
                    android:text="@string/book_author"
                    android:textColor="@color/black_500"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/tvAuthor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCategory"
                    android:textColor="@color/black_700"
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/author"
                    app:layout_constraintStart_toStartOf="@id/tvAuthor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/category"
                    android:text="@string/book_category"
                    android:textColor="@color/black_500"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/tvCategory"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/category"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLanguage"
                    android:text="@string/language"
                    android:textColor="@color/black_700"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/category"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/language"
                    android:text="@string/book_language"
                    android:textColor="@color/black_500"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/tvLanguage"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/language"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPages"
                    android:text="@string/pages"
                    android:textSize="18sp"
                    android:textColor="@color/black_700"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/language"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pages"
                    android:textColor="@color/black_500"
                    android:text="@string/book_pages"
                    app:layout_constraintStart_toStartOf="@id/language"
                    app:layout_constraintTop_toTopOf="@id/tvPages"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/title"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/detail"
                android:layout_marginTop="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/black_500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:padding="6dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/book_description"
                            android:textSize="22sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/book_description"
                    android:textColor="@color/black_200"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/description"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnFavorite"
        app:icon="@drawable/ic_baseline_favorite_24"
        android:text="Favorite"
        android:backgroundTint="#dc3545"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShare"
        app:layout_constraintBottom_toTopOf="@id/btnOpen"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnShare"
        app:icon="@drawable/ic_baseline_share_24"
        android:text="Share"
        android:backgroundTint="#0d6efd"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/btnFavorite"
        app:layout_constraintTop_toTopOf="@id/btnFavorite"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnOpen"
        android:text="Open Book"
        android:textAllCaps="false"
        app:cornerRadius="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>